# orbit-agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  docker-compose.yml  run-local.sh
agent/prompts/: executor.md  library.md  planner.md
agent/scenarios/: README.md  validate_scenario.py
agent/scenarios/examples/: orbit_winback.json
agent/skills/: README.md  author-offer-rfm.md  author-scenario.md  check-consent.md  discover-opportunity.md  eql-cheatsheet.md  execute-campaign.md  monitor-and-iterate.md  read-customer-data.md
agent/templates/: winback-shell.html
demo/: concept-1-orbital.html
docs/: SETUP.md  USAGE.md
docs/reference/: bloomreach-api.md  endpoints-to-mcp.md  scenarios.md
docs/submission/: README.md  architecture.md  demo-script.md  mcp-usage.md  project-summary.md  responsible-ai-note.md  team.md
hermes/.hermes/profiles/orbit/: SOUL.md  config.yaml  profile.yaml
hermes/.hermes/profiles/orbit/skills/author-offer-rfm/: SKILL.md
hermes/.hermes/profiles/orbit/skills/author-scenario/: SKILL.md
hermes/.hermes/profiles/orbit/skills/check-consent/: SKILL.md
hermes/.hermes/profiles/orbit/skills/discover-opportunity/: SKILL.md
hermes/.hermes/profiles/orbit/skills/eql-cheatsheet/: SKILL.md
hermes/.hermes/profiles/orbit/skills/execute-campaign/: SKILL.md
hermes/ui/: docker_init.bash  requirements.txt
mcp/bloomreach-engagement-mcp/: .env.example  README.md  client_example.py  docker-compose.yml  pyproject.toml  requirements.txt  server.py
mcp/openapi-specs/: openapi.yaml
(+3 files in other folders)
