[project]
name = "bloomreach-engagement-mcp"
version = "1.0.0"
description = "FastMCP server wrapping Bloomreach Engagement API endpoints"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools]
py-modules = ["server"]
